<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Madrid Libre Transport</string>
    <string name="version">1.0.0</string>
    <string name="license">GNU GPLv3</string>
    <string name="love_signature">Made with ❤️ in Spain</string>

    <string name="title_activity_stop">Stops</string>
    <string name="title_activity_line">Lines</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_token">Token</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_about">About</string>

    <string name="title_line_details">Line details</string>
    <string name="title_stop_details">Stop details</string>

    <string name="line_start_time">Start time</string>
    <string name="line_end_time">End time</string>
    <string name="line_outward">Outward</string>
    <string name="line_return">Return</string>

    <string name="card_bus_arriving">Arriving</string>
    <string name="card_bus_next">Next bus</string>

    <string name="search_stops">Search stops</string>
    <string name="search_lines">Search lines</string>

    <string name="toolbar_favorite">Favorite</string>
    <string name="toolbar_update">Refresh</string>

    <string name="error_lines">Error retrieving lines</string>
    <string name="stop_error">No data was found for this stop</string>
    <string name="database_error">Unable to connect to database</string>
    <string name="error_time">Error retrieving times for lines</string>
    <string name="error_refreshing">Error refreshing</string>
    <string name="error_token">Token not found</string>

    <string name="invalid_stop">Invalid stop ID</string>
    <string name="invalid_line">Invalid line ID</string>

    <string name="message_favorite_add">Added to favorites</string>
    <string name="message_favorite_remove">Removed from favorites</string>
    <string name="message_successful_login">Successfully logged in</string>
    <string name="message_invalid_credentials">Invalid username or password</string>
    <string name="message_empty_username">Username cannot empty</string>
    <string name="message_empty_password">Password cannot be empty</string>
    <string name="message_short_password">Password must be at least 8 characters long</string>
    <string name="message_invalid_username">Username must be a valid email</string>

    <string name="no_favorites">No favorites</string>
    <string name="no_connection">No connection</string>

    <string name="mpass">Login with MPASS</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Don’t have an account? Sign up</string>

    <string name="title_basic_info">Basic info</string>
    <string name="title_version">Version</string>
    <string name="title_database">Database</string>
    <string name="title_legal_and_regulatory">Title &amp; regulatory</string>
    <string name="title_license">License</string>
    <string name="api1">OpenAPI EMT Madrid</string>

    <string name="favorite_name">Favorite name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string name="description_about_logo">A bus icon over a blue background</string>
    <string name="description_emt_logo">The EMT logo</string>
    <string name="description_star">A star icon</string>
    <string name="description_chain">A broken chain icon</string>
    <string name="description_bus_icon">A bus icon</string>
    <string name="description_map">A map of Madrid with indicated Bus and Metro lines</string>
    <string name="description_line_stops">A list of stops for this line</string>
</resources>