<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/title_activity_line"
            app:titleCentered="true" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.search.SearchBar
                android:id="@+id/search_bar_Lines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_lines"
                app:liftOnScroll="true"
                app:liftOnScrollColor="?attr/colorSurfaceContainerHighest">
                <EditText
                    android:id="@+id/lineET"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </com.google.android.material.search.SearchBar>
            <LinearLayout
                android:id="@+id/no_connection"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    app:srcCompat="@drawable/ic_link_off_24dp"
                    app:tint="?attr/colorOnSurfaceVariant"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"
                    android:textSize="18sp"
                    android:text="@string/no_connection"
                    android:textColor="?attr/colorOnSurfaceVariant"/>
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_lines"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"

                tools:itemCount="4"
                tools:listitem="@layout/card_line"

                />
            <com.google.android.material.loadingindicator.LoadingIndicator
                style="@style/Widget.Material3.LoadingIndicator.Contained"
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
