<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/title_activity_about"
            app:titleCentered="true"
            app:navigationIcon="@drawable/ic_back_24dp"
            />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:src="@drawable/ic_launcher_foreground"
                android:background="@drawable/ic_launcher_background"
                android:id="@+id/login"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_gravity="center_horizontal"
                android:layout_width="150dp"
                android:layout_height="150dp"
                />
            <TextView
                android:id="@+id/login_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/app_name"
                android:textStyle="bold"
                android:textColor="?attr/colorOnSurface"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="@id/login"
                app:layout_constraintStart_toStartOf="@id/login"
                app:layout_constraintTop_toBottomOf="@id/login"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#E2E2E2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Version"
                android:textStyle="bold"
                android:textColor="?attr/colorOnSurface"
                app:layout_constraintEnd_toEndOf="@id/login"
                app:layout_constraintStart_toStartOf="@id/login"
                app:layout_constraintTop_toBottomOf="@id/login"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="0.1.0"
                android:textColor="?attr/colorOnSurface"
                app:layout_constraintEnd_toEndOf="@id/login"
                app:layout_constraintStart_toStartOf="@id/login"
                app:layout_constraintTop_toBottomOf="@id/login"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Database"
                android:textStyle="bold"
                android:textColor="?attr/colorOnSurface"
                app:layout_constraintEnd_toEndOf="@id/login"
                app:layout_constraintStart_toStartOf="@id/login"
                app:layout_constraintTop_toBottomOf="@id/login"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"

                android:text="Madrid EMT"
                android:textColor="?attr/colorOnSurface"
                app:layout_constraintEnd_toEndOf="@id/login"
                app:layout_constraintStart_toStartOf="@id/login"
                app:layout_constraintTop_toBottomOf="@id/login"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#E2E2E2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"

                android:text="Licensed under the GNU GPLv3"
                android:textColor="?attr/colorOnSurface"
                app:layout_constraintEnd_toEndOf="@id/login"
                app:layout_constraintStart_toStartOf="@id/login"
                app:layout_constraintTop_toBottomOf="@id/login"
                />

            <TextView
                android:id="@+id/love_signature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_gravity="center_horizontal|bottom"
                android:text="@string/love_signature"
                android:textStyle="bold"
                android:textColor="?attr/colorOnSurface"
                app:layout_constraintEnd_toEndOf="@id/login"
                app:layout_constraintStart_toStartOf="@id/login"
                app:layout_constraintTop_toBottomOf="@id/login"
                />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
